test/reject/02-malformed-start-end.puml
@enduml

@estartuml

@startuml

class hola {
    
}